<resources>
    <string name="app_name">PlanPal</string>
    <string name="menu_button">Menu</string>
    <string name="welcome_message">Welcome, (username)</string>
    <string name="agenda_prompt">What is your agenda today?</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="recent_templates">Recent Templates</string>
    <string name="view_all">View all>></string>
    <string name="files">Files</string>
    <string name="create">Create</string>
    <string name="scheduler">Scheduler</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="plan_pal">Plan Pal</string>
    <string name="getting_started_with_plan_pal">Getting Started with Plan Pal</string>
    <string name="let_s_get_started">Let\'s Get Started!</string>
    <string name="plan_with_joy_track_your_schedule_stay_organized_and_let_your_planner_go_creative_by_creating_your_own_planner_designs">Plan with joy, track your schedule, stay organized, and let your planner go creative by creating your own planner designs</string>
    <string name="no_account_sign_up">No Account? Sign Up</string>
    <string name="hello_user">Hello User!</string>
    <string name="create_an_account">Create an Account</string>

    <!-- Cleaned up strings -->
    <string name="hint_username">Username</string>
    <string name="hint_birthdate">Birthdate</string>
    <string name="hint_email">Email</string>
    <string name="hint_contact_number">Contact Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="button_sign_up">Sign Up</string>
</resources>